# bpfix

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  wait-for-crate.sh
bpfix/: __init__.py
bpfix-bench/: README.md  environment.yaml  libbpf.mk  manifest.yaml  run-bpfix-eval.py  taxonomy.yaml
bpfix-bench/raw/: README.md  legacy-insn-numbering.yaml
bpfix-bench/splits/: README.md  clean60.manifest.json  clean60.txt  dev40.manifest.json  hard40.txt  main.manifest.json  real-seed-candidates.manifest.json  real-seed-candidates.txt
bpfix-bench/tools/: README.md  audit_cases.py  audit_results.py  audit_splits.py  benchmark_metadata.py  bpf_case.py  prompt_manifest.py  refresh_case_artifacts.py  replay_case.py  run_suite.py  test_validate_benchmark.py  validate_benchmark.py
bpfix-empirical/: README.md  environment.yaml  libbpf.mk  manifest.yaml  run-bpfix-eval.py  taxonomy.yaml
bpfix-empirical/raw/: README.md  index.yaml  legacy-insn-numbering.yaml
bpfix-empirical/tools/: README.md  empirical_metadata.py  replay_case.py  test_validate_empirical.py  validate_empirical.py
bpfix-test/: 40-case-plan.md  README.md  clean60.md  design.md  pilot-results.md
bpfix-test/splits/: README.md  clean60.manifest.json  clean60.txt  dev40.manifest.json  dev40.txt  main.manifest.json  main.txt  real-seed-candidates.manifest.json  real-seed-candidates.txt
bpfix-test/tools/: audit_cases.py  audit_results.py  audit_splits.py  bpf_case.py  prompt_manifest.py  refresh_case_artifacts.py  run_suite.py
bpfix/api/: __init__.py
bpfix/baseline/: taxonomy_rules.py
bpfix/catalogs/: __init__.py
crates/bpfanalysis/: Cargo.toml
crates/bpfanalysis/src/: helper_abi.rs  insn.rs  lib.rs  libbpf_log.rs  object_file.rs  pass.rs  test_helpers.rs  verifier_log.rs  verifier_log_tests.rs
crates/bpfanalysis/src/analysis/: bbprogram.rs  bbprogram_api.rs  bbprogram_btf.rs  bbprogram_lift.rs  bbprogram_lift_tests.rs  bbprogram_liveness_tests.rs  bbprogram_lower.rs  bbprogram_use_def.rs  mod.rs
crates/bpfanalysis/src/passes/: map_inline.rs  mod.rs
crates/bpfanalysis/src/verifier_log/: instruction_text.rs  terminal_error.rs
crates/bpfix/: Cargo.toml
crates/bpfix/src/: classifier.rs  diagnostic.rs  family.rs  input.rs  main.rs  output.rs  proof.rs  source.rs
crates/bpfix/src/diagnostic/: analyzer.rs  callback_signal.rs  context_signal.rs  dynptr_signal.rs  fallback_pointer_signal.rs  helper_contract_signal.rs  irq_signal.rs  iterator_signal.rs  lowering_signal.rs  map_value_signal.rs  model.rs  nullable_signal.rs  opaque_pointer_signal.rs  packet_signal.rs  proof_events.rs  protocol_signal.rs  scalar_range_signal.rs  shared.rs  signal.rs  signal_pipeline.rs  source_query.rs  stack_access.rs  stack_signal.rs  stale_pointer_signal.rs  tests.rs  type_contract_signal.rs
crates/bpfix/tests/: cli.rs
docs/: analysis-integration-todo.md  benchmark-corpus-design.md  benchmark-refactor-todo.md  bpfix-ai-bench-design.md  empirical-corpus-design.md  error-catalog.yaml  open-source-tool-design.md  open-source-ux-hardening-plan.md  project-status.md  release.md  research-plan.md  user-guide.md
examples/: README.md  check-examples.sh
interface/: __init__.py
scripts/: check-docs.py  check-error-catalog.py  check-release.sh  restore-benchmark-fixtures.sh  restore-benchmark-logs.sh  restore-empirical-fixtures.sh
tests/: test_api.py  test_baseline.py  test_batch_correctness.py  test_bpftool_parser.py  test_control_dep.py  test_diagnostic_schema.py  test_log_parser.py  test_monitor.py  test_slicer.py  test_smoke.py  test_trace_parser.py
tools/: evaluate_benchmark.py
(+2105 files in other folders)
