[package]
name = "bpfanalysis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust analysis primitives for eBPF verifier diagnostics"

[dependencies]
anyhow.workspace = true
clap.workspace = true
libbpf-sys = { workspace = true, optional = true }
object = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true

[features]
default = ["analysis", "object-analysis"]
analysis = ["dep:libbpf-sys"]
object-analysis = ["analysis", "dep:object"]
