[package]
name = "bpfanalysis"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust analysis primitives for eBPF verifier diagnostics"
keywords = ["ebpf", "bpf", "verifier", "analysis"]
categories = ["development-tools::debugging", "parser-implementations"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
libbpf-sys = { workspace = true, optional = true }
object = { workspace = true, optional = true }
serde.workspace = true

[features]
default = ["analysis", "object-analysis"]
analysis = ["dep:libbpf-sys"]
cli = ["analysis", "dep:clap"]
object-analysis = ["analysis", "dep:object"]
