[package]
name = "bpfix"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Userspace eBPF verifier failure diagnostic CLI"
readme = "../../README.md"
keywords = ["ebpf", "bpf", "verifier", "diagnostics"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "bpfix"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bpfanalysis = { version = "0.1.3", path = "../bpfanalysis", default-features = false }
clap.workspace = true

[features]
default = []
object-analysis = ["bpfanalysis/object-analysis"]
